# null-402-avax-monorepo

./: .gitignore  HACKATHON_SUBMISSION_FORM.md  README.md  ROADMAP.md  TESTING.md  TODO.md
null-402-circuits/: .gitignore  README.md  build.sh  package-lock.json  package.json  payment.circom
null-402-contracts/: .gitignore  README.md  deployments-fuji.json  foundry.toml
null-402-contracts/soroban-legacy/: Cargo.toml  README.md
null-402-contracts/soroban-legacy/pool/: Cargo.toml
null-402-contracts/soroban-legacy/pool/src/: lib.rs
null-402-contracts/soroban-legacy/pool/test_snapshots/: deposit_escrows_funds_and_records_commitment.1.json  deposits_increment_leaf_index.1.json  settle_rejects_invalid_proof.1.json  settle_rejects_replay.1.json  settle_verifies_proof_pays_recipient_and_spends_nullifier.1.json
null-402-contracts/soroban-legacy/pool/tests/: pool.rs
null-402-contracts/soroban-legacy/verifier/: Cargo.toml
null-402-contracts/soroban-legacy/verifier/src/: lib.rs
null-402-contracts/soroban-legacy/verifier/test_snapshots/: rejects_tampered_public_input.1.json
null-402-contracts/soroban-legacy/verifier/tests/: fixture.rs  verify.rs
null-402-dashboard/: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json
null-402-docs/: .gitignore  README.md
null-402-examples/: .gitignore  README.md  e2e-demo.mjs  package.json
null-402-gateway/: .env.example  README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
null-402-landing/: OVERVIEW.md  README.md  index.html
null-402-mcp/: .gitignore  README.md  (+1 more)
(+53 files in other folders)
