[workspace]
resolver = "2"
members = ["verifier", "pool"]

[workspace.dependencies]
# soroban-sdk 26.x exposes the BN254 (CAP-0074) pairing + Poseidon (CAP-0075) host
# functions used here. Verify network support before mainnet:
# https://developers.stellar.org/docs/networks/software-versions
soroban-sdk = "26"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
strip = "symbols"
codegen-units = 1
lto = true
panic = "abort"
